[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Resources/burrow.png" type="Texture" id=1]
[ext_resource path="res://src/BunnySpawner.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 592.054

[node name="Burrow" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="SpawnRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnRadius"]
shape = SubResource( 1 )

[node name="Alert" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Label" type="Label" parent="Alert"]
margin_left = -32.0
margin_top = -96.0
margin_right = -26.0
margin_bottom = -82.0
rect_scale = Vector2( 10, 5 )
custom_colors/font_color = Color( 0.945098, 1, 0.0313726, 1 )
text = "!"
align = 1
valign = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
